# processing

./: .env  .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/api/: bestlight_cases.rs  count.rs  counter.rs  firm.rs  mod.rs  oai_descriptions.rs  page.rs  reviews.rs
src/models/: ai_description.rs  ai_review.rs  bestlight_cases.rs  categories.rs  cities.rs  count.rs  counter.rs  firm.rs  mod.rs  pages.rs  rabbitmq.rs  review.rs
src/oai_processing/: ai_description_processing.rs  ai_title_processing.rs  keyword_extraction_processing.rs  mod.rs  oai_description_processing.rs  oai_pages_processing.rs  oai_reviews_processing.rs  oai_reviews_rewrite_processing.rs  oai_title_processing.rs  qwen_cli_processing.rs  wrappers.rs
src/processing/: images_processing.rs  mod.rs  pages_sitemap_processing.rs  reviews_count_processing.rs  sitemap_processing.rs  title_processing.rs  urls_processing.rs
src/services/: mod.rs  rabbitmq_consumer.rs  rabbitmq_producer.rs
src/utils/: mod.rs  transliterate.rs
