[package]
name = "processing"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
tokio = { version = "1.37.0", features = ['full']}
uuid = { version = "1.4.1", features = ["serde", "v4"] }
sqlx = { version = "0.8.0-alpha.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"], git = "https://github.com/KirDontsov/sqlx.git" }
chrono = { version = "0.4.30", features = ["serde"] }
env_logger = "0.11.0"
thiserror = "1.0.61"
photon-rs = { version = "0.3.2", default-features = false, git = "https://github.com/silvia-odwyer/photon", rev = "3b72d357848cd76be9363e87ad0cd02a19b988d2" }
glob = "0.3.1"
sitemap = "0.4.1"
translit = "0.5.0"
urlencoding = "2.1.3"
